--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,12 @@
 /*FOR MORE HELP SEE https://developer.chrome.com/extensions/getstarted */
 {
 	"manifest_version": 2,
-	"name": "EXTENSION NAME",
-	"description": "YOUR CUSTOM TAGLINE FOR YOUR EXTENSION",
+	"name": "Insights on Fire",
+	"description": "Adding all the tools you need to troubleshoot the Insights Platform",
 	"version": "1.0.0",
 	"permissions": [
 		"activeTab",
-		"https://ajax.googleapis.com/", /*IF YOU WANT TO BRING IN JQUERY OR OTHER LIBRARY */
-		"http://odo.corp.qualtrics.com/*", /*ANY OTHER PAGE YOU NEED TO BE ABLE TO QUERY */
-		"storage" /*IF YOU WANT TO STORE VARIABLES ON A USER SPECIFIC BASIS */
+		"https://ajax.googleapis.com/" /*IF YOU WANT TO BRING IN JQUERY OR OTHER LIBRARY */
 	],
 	"browser_action": { /*BROWSER ACTION IS ONLY NEEDED IF YOU WANT THE EXTENSION AVAILABLE IN THE UPPER RIGHT SECTION OF CHROME*/
 		"default_icon": "icon.png", /*ICON THAT WILL APPEAR AS THE ICON IN UPPER RIGHT OF CHROME*/
@@ -18,9 +16,9 @@
 	"icons": { "128": "icon.png"}, /*ICON THAT DISPLAYS IN CHROME STORE AND EXTENSIONS PAGE*/
 	"content_scripts": [ /*ANY SCRIPTS OR CSS PAGES YOU WANT TO REFERENCE NEED TO BE PUT HERE*/
 		{
-		"matches": ["http://odo.corp.qualtrics.com/*"], /*THE PAGE THAT SHOULD TRIGGER THIS EXTENSION*/
-		"js": ["resources/jquery-1.11.3.min.js","stuff.js"], /*ANY JS PAGES THAT SHOULD LOAD*/
-		"css": ["stuff.css"], /*ANY CSS PAGES THAT SHOULD LOAD*/
+		"matches": ["http://*.qualtrics.com/*"], /*THE PAGE THAT SHOULD TRIGGER THIS EXTENSION*/
+		"js": ["resources/jquery-1.11.3.min.js","troubleshooting.js"], /*ANY JS PAGES THAT SHOULD LOAD*/
+		"css": ["style.css"], /*ANY CSS PAGES THAT SHOULD LOAD*/
 		"run_at": "document_end" /*WHEN SHOULD THE EXTENSION LOAD THESE SCRIPTS?*/
 		}
 	]
