Adding ID retrieval and bypassing of TOS

--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,22 @@
-/*FOR MORE HELP SEE https://developer.chrome.com/extensions/getstarted */
 {
 	"manifest_version": 2,
 	"name": "Insights on Fire",
 	"description": "Adding all the tools you need to troubleshoot the Insights Platform",
-	"version": "1.0.0",
+	"version": "0.0.3",
 	"permissions": [
 		"activeTab",
-		"https://ajax.googleapis.com/" /*IF YOU WANT TO BRING IN JQUERY OR OTHER LIBRARY */
+		"https://ajax.googleapis.com/"
 	],
-	"browser_action": { /*BROWSER ACTION IS ONLY NEEDED IF YOU WANT THE EXTENSION AVAILABLE IN THE UPPER RIGHT SECTION OF CHROME*/
-		"default_icon": "icon.png", /*ICON THAT WILL APPEAR AS THE ICON IN UPPER RIGHT OF CHROME*/
-		"default_popup": "popup.html" /*IF YOU WANT A DROPDOWN IN THE UPPER RIGHT OF CHROME, THIS PAGE WILL BE THE DROPDOWN OR PAGE THAT LOADS*/
+	"browser_action": {
+		"default_icon": "icon.png"
 	},
-	"options_page": "options.html", /*IF YOU WANT THE USER TO HAVE OPTIONS FOR THE EXTENSION, MUST INCLUDE THIS. MUST USE STORAGE AS WELL IF USING THIS.*/
-	"icons": { "128": "icon.png"}, /*ICON THAT DISPLAYS IN CHROME STORE AND EXTENSIONS PAGE*/
-	"content_scripts": [ /*ANY SCRIPTS OR CSS PAGES YOU WANT TO REFERENCE NEED TO BE PUT HERE*/
+	"icons": { "128": "icon.png"},
+	"content_scripts": [
 		{
-		"matches": ["http://*.qualtrics.com/*"], /*THE PAGE THAT SHOULD TRIGGER THIS EXTENSION*/
-		"js": ["resources/jquery-1.11.3.min.js","troubleshooting.js"], /*ANY JS PAGES THAT SHOULD LOAD*/
-		"css": ["style.css"], /*ANY CSS PAGES THAT SHOULD LOAD*/
-		"run_at": "document_end" /*WHEN SHOULD THE EXTENSION LOAD THESE SCRIPTS?*/
+		"matches": ["http://*/ControlPanel*", "https://*/ControlPanel*","http://*/WRQualtricsControlPanel*", "https://*/WRQualtricsControlPanel*"],
+		"js": ["resources/jquery-1.11.3.min.js","troubleshooting.js"],
+		"css": ["style.css"],
+		"run_at": "document_end"
 		}
 	]
 }
